--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,13 +2,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ site.title }} | {{ page.title }}</title>
+      <!-- Inline critical CSS for Google Fonts -->
+  <style>
+    @font-face {
+      font-family: 'Abhaya Libre';
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: local('Abhaya Libre'), url(https://fonts.gstatic.com/s/abhayalibre/v10/e3tmeuGtX-Co5MNzeAOqinEYEsU.woff2) format('woff2');
+    }
+    @font-face {
+      font-family: 'Abhaya Libre';
+      font-style: normal;
+      font-weight: 700;
+      font-display: swap;
+      src: local('Abhaya Libre Bold'), url(https://fonts.gstatic.com/s/abhayalibre/v10/e3tmeuGtX-Co5MNzeAOqinEYEsU.woff2) format('woff2');
+    }
+    @font-face {
+      font-family: 'Homemade Apple';
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: local('Homemade Apple'), url(https://fonts.gstatic.com/s/homemadeapple/v14/Qw3aZQpJ562ft5aCIERgi23mI3A.woff2) format('woff2');
+    }
+    @font-face {
+      font-family: 'Source Sans Pro';
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: local('Source Sans Pro'), url(https://fonts.gstatic.com/s/sourcesanspro/v24/6xK3dSBYKcSV-LCoeQqfX1RYOo3qOK7jPrykkHc.woff2) format('woff2');
+    }
+    @font-face {
+      font-family: 'Source Sans Pro';
+      font-style: normal;
+      font-weight: 600;
+      font-display: swap;
+      src: local('Source Sans Pro SemiBold'), url(https://fonts.gstatic.com/s/sourcesanspro/v24/6xK3dSBYKcSV-LCoeQqfX1RYOo3qOK7jPrykkHc.woff2) format('woff2');
+    }
+  </style>
+     <!-- Preload Google Fonts -->
+     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;700&family=Homemade+Apple&family=Source+Sans+Pro:wght@400;600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;700&family=Homemade+Apple&family=Source+Sans+Pro:wght@400;600&display=swap"></noscript> 
     <link href="{{ '/assets/css/main.css' | relative_url }}" rel="stylesheet">
     <link href="{{ '/assets/css/bootstrap-icons.min.css' | relative_url }}" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="{{ '/assets/images/favicon.ico' | relative_url }}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
