--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,20 +13,13 @@
 
 html, body {
     scroll-behavior: smooth;
-    font-family: Namun Gothic, sans-serif;
+    font-family: 'Source Sans Pro', serif;
     margin: 0;
     padding: 0;
 }
 
 .white-text-shadow {
     text-shadow: white 0px 0px 10px;
-}
-
-.source-serif-4 {
-    font-family: "Source Serif 4", serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
 }
 
 /* Navbar */
@@ -64,6 +57,24 @@ html, body {
     overflow: hidden;
   }
 
+/* Mobile Menu */
+.navbar-burger .burger-lines span {
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    transform-origin: center;
+  }
+  
+  .navbar-burger.active .burger-lines span:nth-child(1) {
+    transform: rotate(45deg) translate(5.5px, 5.5px);
+  }
+  
+  .navbar-burger.active .burger-lines span:nth-child(2) {
+    opacity: 0;
+  }
+  
+  .navbar-burger.active .burger-lines span:nth-child(3) {
+    transform: rotate(-45deg) translate(5.5px, -5.5px);
+  }
+  
 /* Homepage Scroll Arrow */
 .scroll-down-link {    
     -webkit-animation: fade_move_down 2s ease-in-out infinite;
