--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,20 +11,13 @@
 
 html, body {
     scroll-behavior: smooth;
-    font-family: Namun Gothic, sans-serif;
+    font-family: 'Source Sans Pro', serif;
     margin: 0;
     padding: 0;
 }
 
 .white-text-shadow {
     text-shadow: white 0px 0px 10px;
-}
-
-.source-serif-4 {
-    font-family: "Source Serif 4", serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
 }
 
 /* Navbar */
@@ -62,6 +55,24 @@ html, body {
     overflow: hidden;
   }
 
+/* Mobile Menu */
+.navbar-burger .burger-lines span {
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    transform-origin: center;
+  }
+  
+  .navbar-burger.active .burger-lines span:nth-child(1) {
+    transform: rotate(45deg) translate(5.5px, 5.5px);
+  }
+  
+  .navbar-burger.active .burger-lines span:nth-child(2) {
+    opacity: 0;
+  }
+  
+  .navbar-burger.active .burger-lines span:nth-child(3) {
+    transform: rotate(-45deg) translate(5.5px, -5.5px);
+  }
+  
 /* Homepage Scroll Arrow */
 .scroll-down-link {    
     -webkit-animation: fade_move_down 2s ease-in-out infinite;
@@ -104,5 +115,653 @@ html, body {
 
   
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
+.container {width
+
+:100%
+}
+@media (min-width: 640px) {
+    .container {max-width
+
+:640px
+    }
+}
+@media (min-width: 768px) {
+    .container {max-width
+
+:768px
+    }
+}
+@media (min-width: 1024px) {
+    .container {max-width
+
+:1024px
+    }
+}
+@media (min-width: 1280px) {
+    .container {max-width
+
+:1280px
+    }
+}
+@media (min-width: 1536px) {
+    .container {max-width
+
+:1536px
+    }
+}
+.fixed {position
+
+:fixed
+}
+.absolute {position
+
+:absolute
+}
+.relative {position
+
+:relative
+}
+.bottom-0 {bottom
+
+:0px
+}
+.left-0 {left
+
+:0px
+}
+.left-1\/2 {left
+
+:50%
+}
+.right-4 {right
+
+:1rem
+}
+.top-0 {top
+
+:0px
+}
+.top-2 {top
+
+:0.5rem
+}
+.z-10 {z-index
+
+:10
+}
+.z-40 {z-index
+
+:40
+}
+.z-50 {z-index
+
+:50
+}
+.col-span-2 {grid-column
+
+:span 2 / span 2
+}
+.m-auto {margin
+
+:auto
+}
+.mx-4 {margin-left
+
+:1rem;margin-right
+
+:1rem
+}
+.mx-6 {margin-left
+
+:1.5rem;margin-right
+
+:1.5rem
+}
+.mx-8 {margin-left
+
+:2rem;margin-right
+
+:2rem
+}
+.mx-auto {margin-left
+
+:auto;margin-right
+
+:auto
+}
+.my-6 {margin-top
+
+:1.5rem;margin-bottom
+
+:1.5rem
+}
+.my-auto {margin-top
+
+:auto;margin-bottom
+
+:auto
+}
+.mb-1 {margin-bottom
+
+:0.25rem
+}
+.mb-2 {margin-bottom
+
+:0.5rem
+}
+.mb-4 {margin-bottom
+
+:1rem
+}
+.mb-6 {margin-bottom
+
+:1.5rem
+}
+.mb-8 {margin-bottom
+
+:2rem
+}
+.mt-2 {margin-top
+
+:0.5rem
+}
+.block {display
+
+:block
+}
+.flex {display
+
+:flex
+}
+.grid {display
+
+:grid
+}
+.hidden {display
+
+:none
+}
+.h-1 {height
+
+:0.25rem
+}
+.h-16 {height
+
+:4rem
+}
+.h-2\/5 {height
+
+:40%
+}
+.h-24 {height
+
+:6rem
+}
+.h-4 {height
+
+:1rem
+}
+.h-\[calc\(100vh-5rem\)\] {height
+
+:calc(100vh - 5rem)
+}
+.h-full {height
+
+:100%
+}
+.h-screen {height
+
+:100vh
+}
+.min-h-full {min-height
+
+:100%
+}
+.w-4 {width
+
+:1rem
+}
+.w-6 {width
+
+:1.5rem
+}
+.w-full {width
+
+:100%
+}
+.w-screen {width
+
+:100vw
+}
+.flex-grow {flex-grow
+
+:1
+}
+.-translate-x-1\/2 {--tw-translate-x
+
+:-50%;transform
+
+:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+}
+.transform {transform
+
+:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+}
+.cursor-pointer {cursor
+
+:pointer
+}
+.list-inside {list-style-position
+
+:inside
+}
+.list-disc {list-style-type
+
+:disc
+}
+.grid-cols-1 {grid-template-columns
+
+:repeat(1, minmax(0, 1fr))
+}
+.flex-col {flex-direction
+
+:column
+}
+.flex-wrap {flex-wrap
+
+:wrap
+}
+.items-start {align-items
+
+:flex-start
+}
+.items-center {align-items
+
+:center
+}
+.justify-center {justify-content
+
+:center
+}
+.justify-between {justify-content
+
+:space-between
+}
+.gap-5 {gap
+
+:1.25rem
+}
+.gap-8 {gap
+
+:2rem
+}
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {--tw-space-x-reverse
+
+:0;margin-right
+
+:calc(1rem * var(--tw-space-x-reverse));margin-left
+
+:calc(1rem * calc(1 - var(--tw-space-x-reverse)))
+}
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {--tw-space-y-reverse
+
+:0;margin-top
+
+:calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));margin-bottom
+
+:calc(1.5rem * var(--tw-space-y-reverse))
+}
+.self-center {align-self
+
+:center
+}
+.overflow-auto {overflow
+
+:auto
+}
+.overflow-y-auto {overflow-y
+
+:auto
+}
+.rounded-full {border-radius
+
+:9999px
+}
+.rounded-md {border-radius
+
+:0.375rem
+}
+.border-b {border-bottom-width
+
+:1px
+}
+.border-gray-300 {--tw-border-opacity
+
+:1;border-color
+
+:rgb(209 213 219 / var(--tw-border-opacity))
+}
+.bg-charcoal {background-color
+
+:#3E4E5Fff
+}
+.bg-current {background-color
+
+:currentColor
+}
+.bg-sapphire {background-color
+
+:#044FABff
+}
+.bg-white {--tw-bg-opacity
+
+:1;background-color
+
+:rgb(255 255 255 / var(--tw-bg-opacity))
+}
+.bg-white\/25 {background-color
+
+:rgb(255 255 255 / 0.25)
+}
+.bg-white\/50 {background-color
+
+:rgb(255 255 255 / 0.5)
+}
+.bg-\[url\(\'\/assets\/images\/merida\!\.jpg\'\)\] {background-image
+
+:url('/assets/images/merida!.jpg')
+}
+.bg-gradient-to-b {background-image
+
+:linear-gradient(to bottom, var(--tw-gradient-stops))
+}
+.from-transparent {--tw-gradient-from
+
+:transparent var(--tw-gradient-from-position);--tw-gradient-to
+
+:rgb(0 0 0 / 0) var(--tw-gradient-to-position);--tw-gradient-stops
+
+:var(--tw-gradient-from), var(--tw-gradient-to)
+}
+.to-sapphire {--tw-gradient-to
+
+:#044FABff var(--tw-gradient-to-position)
+}
+.bg-cover {background-size
+
+:cover
+}
+.bg-center {background-position
+
+:center
+}
+.bg-top {background-position
+
+:top
+}
+.p-3 {padding
+
+:0.75rem
+}
+.p-4 {padding
+
+:1rem
+}
+.p-5 {padding
+
+:1.25rem
+}
+.px-4 {padding-left
+
+:1rem;padding-right
+
+:1rem
+}
+.px-5 {padding-left
+
+:1.25rem;padding-right
+
+:1.25rem
+}
+.py-1 {padding-top
+
+:0.25rem;padding-bottom
+
+:0.25rem
+}
+.py-4 {padding-top
+
+:1rem;padding-bottom
+
+:1rem
+}
+.pb-3 {padding-bottom
+
+:0.75rem
+}
+.pb-4 {padding-bottom
+
+:1rem
+}
+.pb-6 {padding-bottom
+
+:1.5rem
+}
+.pr-1 {padding-right
+
+:0.25rem
+}
+.pr-4 {padding-right
+
+:1rem
+}
+.pt-10 {padding-top
+
+:2.5rem
+}
+.pt-2 {padding-top
+
+:0.5rem
+}
+.pt-20 {padding-top
+
+:5rem
+}
+.pt-5 {padding-top
+
+:1.25rem
+}
+.pt-6 {padding-top
+
+:1.5rem
+}
+.text-center {text-align
+
+:center
+}
+.font-abhaya-libre {font-family
+
+:Abhaya Libre, serif
+}
+.font-homemade-apple {font-family
+
+:Homemade Apple, cursive
+}
+.text-2xl {font-size
+
+:1.5rem;line-height
+
+:2rem
+}
+.text-3xl {font-size
+
+:1.875rem;line-height
+
+:2.25rem
+}
+.text-5xl {font-size
+
+:3rem;line-height
+
+:1
+}
+.text-lg {font-size
+
+:1.125rem;line-height
+
+:1.75rem
+}
+.text-xl {font-size
+
+:1.25rem;line-height
+
+:1.75rem
+}
+.font-bold {font-weight
+
+:700
+}
+.font-semibold {font-weight
+
+:600
+}
+.leading-normal {line-height
+
+:1.5
+}
+.text-the-knot {--tw-text-opacity
+
+:1;color
+
+:rgb(67 126 146 / var(--tw-text-opacity))
+}
+.text-white {--tw-text-opacity
+
+:1;color
+
+:rgb(255 255 255 / var(--tw-text-opacity))
+}
+.antialiased {-webkit-font-smoothing
+
+:antialiased;-moz-osx-font-smoothing
+
+:grayscale
+}
+.opacity-0 {opacity
+
+:0
+}
+.shadow-md {--tw-shadow
+
+:0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);--tw-shadow-colored
+
+:0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);box-shadow
+
+:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+.backdrop-blur-sm {--tw-backdrop-blur
+
+:blur(4px);-webkit-backdrop-filter
+
+:var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);backdrop-filter
+
+:var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia)
+}
+.transition-opacity {transition-property
+
+:opacity;transition-timing-function
+
+:cubic-bezier(0.4, 0, 0.2, 1);transition-duration
+
+:150ms
+}
+.transition-transform {transition-property
+
+:transform;transition-timing-function
+
+:cubic-bezier(0.4, 0, 0.2, 1);transition-duration
+
+:150ms
+}
+.duration-300 {transition-duration
+
+:300ms
+}
+.ease-in-out {transition-timing-function
+
+:cubic-bezier(0.4, 0, 0.2, 1)
+}
+@media (min-width: 768px) {
+    .md\:mx-12 {margin-left
+
+:3rem;margin-right
+
+:3rem
+    }
+    .md\:mx-8 {margin-left
+
+:2rem;margin-right
+
+:2rem
+    }
+    .md\:mb-10 {margin-bottom
+
+:2.5rem
+    }
+    .md\:flex {display
+
+:flex
+    }
+    .md\:hidden {display
+
+:none
+    }
+    .md\:h-1\/2 {height
+
+:50%
+    }
+    .md\:grid-cols-2 {grid-template-columns
+
+:repeat(2, minmax(0, 1fr))
+    }
+    .md\:items-center {align-items
+
+:center
+    }
+    .md\:py-10 {padding-top
+
+:2.5rem;padding-bottom
+
+:2.5rem
+    }
+    .md\:pt-5 {padding-top
+
+:1.25rem
+    }
+    .md\:text-left {text-align
+
+:left
+    }
+    .md\:text-right {text-align
+
+:right
+    }
+    .md\:text-xl {font-size
+
+:1.25rem;line-height
+
+:1.75rem
+    }
+    .md\:leading-none {line-height
+
+:1
+    }
+}
+@media (min-width: 1280px) {
+    .xl\:mx-36 {margin-left
+
+:9rem;margin-right
+
+:9rem
+    }
+}
