Created footer and set static size for header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,14 @@
-<footer>
+<footer class="bg-sapphire text-center content-center h-20 w-full p-4 relative">
+  <p class="text-white">
+    A Greenfield Project by
+    <a
+      href="https://github.com/shehanr"
+      class="text-blue-200 hover:underline font-bold"
+      >shehanr</a
+    >.
+    <span class="relative group cursor-pointer">
+      Made with <i class="bi bi-heart-fill text-red-500 px-1"></i> using Jekyll
+      and Tailwind
+    </span>
+  </p>
 </footer>
