--- a/_layouts/details.html
+++ b/_layouts/details.html
@@ -4,7 +4,7 @@ title: "Details"
 permalink: /Details
 ---
 <!-- Tiles Container -->
-<div class="container m-auto py-4 md:pt-5 md:py-10 px-5 flex-grow h-[calc(100vh-5rem)] relative">
+<div class="container bg-sapphire m-auto p-3 md:px-0 flex-grow h-[calc(100vh-10rem)] relative">
   <div id="details-grid" class="grid grid-cols-1 md:grid-cols-2 gap-5 h-full">
     <!-- Tile 1 -->
     <div class="tile backdrop-blur-sm bg-white/25 shadow-md flex items-center justify-center cursor-pointer rounded-md" data-target="#expanded-1">
