--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="p-5 flex justify-between items-center z-40 w-full {% if page.url == '/' %}absolute{% endif %}">
+<nav class="p-5 flex justify-between items-center z-40 h-20 w-full {% if page.url == '/' %}absolute{% endif %}">
     <div class="container mx-auto flex justify-between items-center">
         <div class="spin-please z-50">
             <i class="bi bi-suit-heart-fill text-white white-text-shadow text-3xl"></i>
