Fixed ios safari bg notch issue

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,19 +21,17 @@ permalink: /
     <div class="row flex h-16">
       &nbsp;
     </div>
-    <div class="row">
+    <div class="row hidden">
       <a href="#our-story" class="flex flex-col scroll-down-arrow">
         <span class="scroll-down-text self-center text-lg font-bold text-white z-40">Our Story</span>
         <span class="scroll-down-link white-text-shadow bi bi-chevron-down self-center z-40 cursor-pointer text-white text-3xl pt-2"></span>
       </a>        
     </div>
   </div>
+  <!-- Background Gradient -->
+  <div class="absolute bottom-0 left-0 w-full h-24 bg-gradient-to-b from-transparent to-sapphire"></div>
 </div>
-
-<!-- Background Gradient -->
-<div class="absolute bottom-0 left-0 w-full h-24 bg-gradient-to-b from-transparent to-sapphire"></div>
-
-<div class="bg-sapphire w-screen">
+<div class="bg-sapphire w-screen hidden">
   <div class="container mx-auto pt-6">
     <div class="row bg-sapphire pt-10 p-4 text-white" id="our-story">
       <p class="pb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
